@@ -1,3 +1,6 @@
+2024-05-10 Just_Explode <explodedbruh@gmail.com>
+
+	* Forked nload and renamed it to dload, started the modification process
 
 2012-02-06 Roland Riegel <feedback@roland-riegel.de>
 
